BusOne02/src/objects/BOT_Pharmacy_Service__c.object
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is Used to store the pharmacy services records and having a lookup relationship with Account.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account. SFDC Account ID will be populated here.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmacy Services</relationshipLabel>
        <relationshipName>Pharmacy_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity Id. it is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_PBM_ID__c</fullName>
        <description>To store the BOT PBM ID. It is used for BOT internal reference.</description>
        <label>PBM_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_PBM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account. SFDC PBM Account ID will be populated here.</description>
        <label>PBM Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmacy Services</relationshipLabel>
        <relationshipName>Pharmacy_Services_PBM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Provider_Name__c</fullName>
        <description>To store other provider name</description>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_SubChannel__c</fullName>
        <description>To store the Sub Channel like Medicare, MA-PD, Employer etc.</description>
        <label>SubChannel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pharmacy Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>